options are loaded, command-line options take precedence. When options
are saved, command-line options are ignored, but original preferences
take precedence. Example:

  isabelle jedit -o threads=1

This runs Isabelle/jEdit with sequential evaluation in ML, without
affecting stored preferences of option "threads".


*** Isabelle/VSCode Prover IDE ***

The command-line tool "isabelle vscode" supports new options -D and -J
to configure the underlying Java process of "isabelle vscode_server",
using the settings variable "VSCODE_JAVA_OPTIONS" as initial value to be
augmented. This is analogous to "JEDIT_JAVA_OPTIONS", but without
"JEDIT_JAVA_SYSTEM_OPTIONS"; regular "ISABELLE_JAVA_SYSTEM_OPTIONS" will
be used instead of "VSCODE_JAVA_SYSTEM_OPTIONS".

* The main toolbar provides access to Isabelle examples and
documentation. Plain text files are opened in the editor, but PDFs
require a suitable VSCode extension (e.g. "vscode-pdf" from the
marketplace).

* Output panels for Isabelle Symbols and Sledgehammer, which imitate
Isabelle/jEdit dockables to some extent.

* Update to recent VSCode 1.104 / VSCodium 1.104.06131, Electron 37.3.1,
Chromium 138.0.7204.235, and Node.js 22.18.0. Note that some Linux
systems (e.g. Ubuntu 24.04) require special file permissions to run
"isabelle vscode" or "isabelle electron" like this:

    cd .../vscodium-1.104.06131/x86_64-linux
    sudo chown root:root chrome-sandbox
    sudo chmod 4755 chrome-sandbox


*** Pure ***

* Command 'thy_deps' expects optional theory arguments as long theory
names, the same way as the 'imports' clause. Minor INCOMPATIBILITY.


*** HOL ***

* New code declaration attributes 'code abort' and 'code drop'
correspond to 'code abort: c' and 'code drop: c' respectively but derive
the affected constant from the corresponding theorem.

* Consolidated auxiliary operations intended for code generation:

    const Set.is_empty
    thm is_empty_def ~> Set.is_empty_iff [simp]

    const Set.remove