@@ -108,7 +108,12 @@ affecting stored preferences of option "threads".
 
 *** Isabelle/VSCode Prover IDE ***
 
-The command-line tool "isabelle vscode" supports new options -D and -J
+* The command-line tool "isabelle vscode" builds its underlying logic
+session before starting the VSCodium editor and its Isabelle language
+server. Thus build progress, errors, and interrupts work more robustly
+via the regular console.
+
+* The command-line tool "isabelle vscode" supports new options -D and -J
 to configure the underlying Java process of "isabelle vscode_server",
 using the settings variable "VSCODE_JAVA_OPTIONS" as initial value to be
 augmented. This is analogous to "JEDIT_JAVA_OPTIONS", but without
